working on veryifying the Jwt
