# routes/flavors.js
@@ -1,10 +1,11 @@
 const express = require('express');
+const authCheck = require('../middleware/authCheck'); // Correct import
+
 const router = express.Router();
-const checkJwt = require('../middleware/authCheck');
 
 const iceCreamShopController = require('../controllers/flavors');
 
-router.get('/api/private', checkJwt, iceCreamShopController.getAllFlavors); // HTTP verb, URL path/pattern, function called to handle that pattern
+router.get('/', authCheck, iceCreamShopController.getAllFlavors); // HTTP verb, URL path/pattern, function called to handle that pattern
 router.get('/:id', iceCreamShopController.getSingleFlavor); // /:id = path/pattern  (the req in the getSinlge function)
 router.post('/', iceCreamShopController.createFlavor);
 router.put('/:id', iceCreamShopController.updateFlavor);
