# swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {
     "title": "My API",
-    "description": "Ice cream shop API",
+    "description": "Api-IceCream-Shop",
     "version": "1.0.0"
   },
   "host": "localhost:8080",
@@ -11,6 +11,29 @@
     "http"
   ],
   "paths": {
+    "/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/profile": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
     "/api-docs": {
       "get": {
         "description": "",
@@ -21,20 +44,23 @@
         }
       }
     },
-    "/flavors/api/private": {
+    "/flavors/": {
       "get": {
-        "description": "get all flavors",
+        "description": "",
         "produces": [
           "application/json"
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       },
       "post": {
-        "description": "add new flavor",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -43,19 +69,19 @@
               "type": "object",
               "properties": {
                 "flavor": {
-                  "example": "Vanilla"
+                  "example": "any"
                 },
                 "brand": {
-                  "example": "Blue bell"
+                  "example": "any"
                 },
                 "type": {
-                  "example": "ice cream"
+                  "example": "any"
                 },
                 "quantity": {
-                  "example": "half gallon"
+                  "example": "any"
                 },
                 "price": {
-                  "example": "6.10"
+                  "example": "any"
                 }
               }
             }
@@ -65,46 +91,8 @@
           "201": {
             "description": "Created"
           },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/toppings/": {
-      "get": {
-        "description": "get all toppings",
-        "produces": [
-          "application/json"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "post": {
-        "description": "add new flavor",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "Cookie crumbs"
-                },
-                "type": {
-                  "example": "cookie"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -129,11 +117,17 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       },
       "put": {
-        "description": "Updates one flavor",
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -148,19 +142,19 @@
               "type": "object",
               "properties": {
                 "flavor": {
-                  "example": "Vanilla"
+                  "example": "any"
                 },
                 "brand": {
-                  "example": "Blue bell"
+                  "example": "any"
                 },
                 "type": {
-                  "example": "ice cream"
+                  "example": "any"
                 },
                 "quantity": {
-                  "example": "half gallon"
+                  "example": "any"
                 },
                 "price": {
-                  "example": "6.10"
+                  "example": "any"
                 }
               }
             }
@@ -176,7 +170,7 @@
         }
       },
       "delete": {
-        "description": "deletes one flavor",
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -195,99 +189,135 @@
         }
       }
     },
-      "/toppings/{id}": {
-        "get": {
-          "description": "get topping by id",
-          "produces": [
-            "application/json"
-          ],
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "required": true,
-              "type": "string"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "OK"
-            }
+    "/toppings/": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           }
-        },
-        "put": {
-          "description": "Updates one topping",
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "required": true,
-              "type": "string"
-            },
-            {
-              "name": "body",
-              "in": "body",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "example": "cookie crumbs"
-                  },
-                  "type": {
-                    "example": "cookie"
-                  }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "type": {
+                  "example": "any"
                 }
               }
             }
-          ],
-          "responses": {
-            "204": {
-              "description": "No Content"
-            },
-            "500": {
-              "description": "Internal Server Error"
-            }
           }
-        },
-        "delete": {
-          "description": "deletes one topping",
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "required": true,
-              "type": "string"
-            }
-          ],
-          "responses": {
-            "204": {
-              "description": "No Content"
-            },
-            "500": {
-              "description": "Internal Server Error"
-            }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
-        }
-      },
-      "/login": {
-        "get": {
-          "summary": "Initiates the login process with Auth0.",
-          "description": "This endpoint redirects the user to Auth0 for authentication."
-        }
-      },
-      "/logout": {
-        "get": {
-          "summary": "Logs the user out from your application.",
-          "description": "This endpoint initiates the logout process and redirects the user back to your application."
-        }
-      },
-      "/callback": {
-        "get": {
-          "summary": "Callback endpoint for Auth0 authentication.",
-          "description": "This endpoint receives the response from Auth0 after authentication and processes it."
         }
       }
+    },
+    "/toppings/{id}": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "type": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    }
   }
-
-
 }
